# ard-client

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
examples/: hf_catalog_example.py
examples/travel_planner/: README.md  a2a_multi_tenancy.py  a2a_multi_tenancy_new.py  client.py  currency_mcp.py  demo_discovery.py  pyproject.toml  servers.py  travel_agent.py
examples/travel_planner/tests/: test_client_prompt.py  test_discovery_sdk.py  test_multi_tenancy.py  test_registry.py  test_travel_agent.py
src/agent_finder_client/: __init__.py  client.py  types.py
src/agent_finder_sdk/: __init__.py  client.py  types.py
src/ard_client/: __init__.py  client.py  types.py
tests/: test_client.py  test_types.py
